--- a/sites/all/themes/unc/css/unc.css
+++ b/sites/all/themes/unc/css/unc.css
@@ -1365,6 +1365,12 @@ color: #FFFFFF;
     margin-bottom:0;
     
 }
+
+/*noticias*/
+.page-node-21 h2.page-header-node{
+color: rgb(116, 173, 225);
+}
+
 /*FIN AMBIENTE*/
 
 /*class genericas para panel nodo*/
@@ -1578,6 +1584,11 @@ margin-top: 55px;
     color: #ffffff;
 }
 
+/*noticias*/
+.page-node-18 h2.page-header-node {
+    color: #a41d34;
+}
+
 /*FIN AMBIENTE*/
 
 /*****************************************************/
@@ -1621,6 +1632,11 @@ margin-top: 55px;
 .page-node-14 .menu-ambiente-2nivel li a:hover{
     background-color:#094469;
     color: #ffffff;
+}
+
+/*noticias*/
+.page-node-14 h2.page-header-node {
+    color: #094469;
 }
 
 /*FIN AMBIENTE*/
@@ -1793,6 +1809,11 @@ margin-top: 55px;
 .page-node-19 .menu-ambiente-2nivel li a:hover{
     background-color:#3a612c;
     color: #ffffff;
+}
+
+/*noticias*/
+.page-node-19 h2.page-header-node {
+    color: #3a612c;
 }
 
 /*FIN AMBIENTE*/
@@ -1968,6 +1989,11 @@ margin-top: 55px;
     color: #ffffff;
 }
 
+/*noticias*/
+.page-node-16 h2.page-header-node {
+    color: #00758b;
+}
+
 /*FIN AMBIENTE*/
 
 
@@ -2102,6 +2128,11 @@ margin-top: 55px;
     margin-bottom: 30px;
 }
 
+/*noticias*/
+.page-node-15 h2.page-header-node{
+color: #c47629;
+}
+
 /*menues*/
 .page-node-15 li.active-trail a{
     background-color: #c47629;
@@ -2139,6 +2170,11 @@ margin-top: 55px;
 .page-node-15 .menu-ambiente-2nivel li a:hover{
     background-color:#c47629;
     color: #ffffff;
+}
+
+/*noticias*/
+.page-node-15 h2.page-header-node {
+    color: #c47629;
 }
 
 /*FIN AMBIENTE*/
@@ -2316,6 +2352,11 @@ margin-top: 55px;
     color: #ffffff;
 }
 
+/*noticias*/
+.page-node-17 h2.page-header-node {
+    color: #801646;
+}
+
 /*FIN AMBIENTE*/
 
 
@@ -2490,9 +2531,15 @@ margin-top: 55px;
     color: #ffffff;
 }
 
+/*noticias*/
+.page-node-22 h2.page-header-node {
+    color: #538d3f;
+}
 
 /*FIN AMBIENTE*/
-/*ambiente english*/
+
+/***********ambiente english************/
+
 /*menues*/
 .page-node-25 li.active-trail a{
     background-color: #094469;
@@ -2530,6 +2577,11 @@ margin-top: 55px;
 .page-node-25 .menu-ambiente-2nivel li a:hover{
     background-color:#094469;
     color: #ffffff;
+}
+
+/*noticias*/
+.page-node-25 h2.page-header-node {
+    color: #094469;
 }
 
 /*fin ambiente*/
@@ -2662,6 +2714,11 @@ background-position-y: 15px;
     overflow: hidden;
     top: 139px;
     z-index: 99999;
+}
+
+/*noticias*/
+.page-node-26 h2.page-header-node {
+    color: #c30d27;
 }
 
 /* ----------------FIN AMBIENTE AGENDA ...........*/
